[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/healthBar/HealthBar.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/healthbarFiller.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/healthbar.png" type="Texture" id=3]

[node name="HealthBar" type="Node2D"]
script = ExtResource( 1 )

[node name="filler1" type="Sprite" parent="."]
position = Vector2( 191, 113 )
texture = ExtResource( 2 )

[node name="filler2" type="Sprite" parent="."]
position = Vector2( 223, 113 )
texture = ExtResource( 2 )

[node name="filler3" type="Sprite" parent="."]
position = Vector2( 254, 112 )
texture = ExtResource( 2 )

[node name="HealthBarOutline" type="Sprite" parent="."]
position = Vector2( 192, 113 )
texture = ExtResource( 3 )
